--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Oxygen - One Page HTML Template | Themeum</title>
+  <title>DecoService</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/animate.min.css" rel="stylesheet"> 
   <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -88,34 +88,44 @@
         <div class="row">
           <div class="text-center col-sm-8 col-sm-offset-2">
             <h2>Our Services</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam</p>
+            <p>DecoService is an interior design service that connects you with top designers to transform your space for a low, flat fee</p>
+            <p class="animated fadeInRightBig"> LET US HELP YOU WHEN... </p>
           </div>
         </div> 
       </div>
       <div class="text-center our-services">
+
         <div class="row">
+
           <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+
             <div class="service-icon">
               <i class="fa fa-flask"></i>
             </div>
+
             <div class="service-info">
-              <h3>Brand Identity</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+              <h3>YOU MOVE IN TOGETHER</h3>
+
             </div>
+
           </div>
+
           <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="450ms">
             <div class="service-icon">
               <i class="fa fa-umbrella"></i>
             </div>
+
             <div class="service-info">
               <h3>Creative Idea</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
             </div>
+
           </div>
+
           <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="550ms">
             <div class="service-icon">
               <i class="fa fa-cloud"></i>
             </div>
+
             <div class="service-info">
               <h3>Awesome Support</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
@@ -198,8 +208,8 @@
     <div class="container">
       <div class="row">
         <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
-          <h2>Our Portfolio</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam</p>
+          <h2>Our Services</h2>
+          <p>DecoService is an interior design service that connects you with top designers to transform your space for a low, flat fee</p>
         </div>
       </div> 
     </div>
@@ -208,13 +218,13 @@
         <div class="col-sm-3">
           <div class="folio-item wow fadeInRightBig" data-wow-duration="1000ms" data-wow-delay="300ms">
             <div class="folio-image">
-              <img class="img-responsive" src="images/portfolio/1.jpg" alt="">
+              <img class="img-responsive" src="images/portfolio/1.jpeg" alt="">
             </div>
             <div class="overlay">
               <div class="overlay-content">
                 <div class="overlay-text">
                   <div class="folio-info">
-                    <h3>Time Hours</h3>
+                    <h3>It's Time To Party</h3>
                     <p>Design, Photography</p>
                   </div>
                   <div class="folio-overview">
@@ -229,13 +239,13 @@
         <div class="col-sm-3">
           <div class="folio-item wow fadeInLeftBig" data-wow-duration="1000ms" data-wow-delay="400ms">
             <div class="folio-image">
-              <img class="img-responsive" src="images/portfolio/2.jpg" alt="">
+              <img class="img-responsive" src="images/portfolio/2.jpeg" alt="">
             </div>
             <div class="overlay">
               <div class="overlay-content">
                 <div class="overlay-text">
                   <div class="folio-info">
-                    <h3>Time Hours</h3>
+                    <h3>The Famly is Growing</h3>
                     <p>Design, Photography</p>
                   </div>
                   <div class="folio-overview">
